- Expanded tooltips of Policies to better explain what each option does. - Spawned Colony Ships now look for the closest Shipyard to the Planet and spawn from there, rather than always from the Capital. - Bugfixed all errors printed to error.log (to do with incorrect scoping, no IDs on fleet queue_action triggers, etc. -- basically syntax errors) except for the localisation key errors. Will look into that one later.

--- a/localisation/00_shr_autocolonise_l_english.yml
+++ b/localisation/00_shr_autocolonise_l_english.yml
@@ -8,13 +8,13 @@
  shr_autocolonisation_disabled_protocols_desc:0 "We shall decide for ourselves when and where is the right time. No AI will assist us in colonising new worlds.\n"
  shr_autocolonisation_enabled_protocols:0 "Default Auto-Colonisation"
  shr_autocolonisation_enabled_protocols_name:0 "Default Auto-Colonisation Protocols"
- shr_autocolonisation_enabled_protocols_desc:0 "Whoever is most suitable to settle a world should be the first pioneers in the vanguard.\n"
+ shr_autocolonisation_enabled_protocols_desc:0 "Whoever is most suitable to settle a world should be the first pioneers in the vanguard.\n\n§ESpecies with highest Habitability rating for a planet will be the one to board the Auto-Coloniser craft. This includes Machine Pops!§!\n"
  shr_autocolonisation_enabled_prefer_organics_protocols:0 "Prefer Organics"
  shr_autocolonisation_enabled_prefer_organics_protocols_name:0 "Prefer Organics Protocols"
- shr_autocolonisation_enabled_prefer_organics_protocols_desc:0 "Though machines sure are survivable, they don't make for the best early settlers. Unless habitability proves severely inhibiting, we'll reserve this privilege for organics only.\n"
+ shr_autocolonisation_enabled_prefer_organics_protocols_desc:0 "Though machines sure are survivable, they don't make for the best early settlers. Unless habitability proves severely inhibiting, we'll reserve this privilege for organics only.\n\n§ESpecies with highest Habitability rating for a planet will be the one to board the Auto-Coloniser craft, but Machine Pops are only considered if organic Species are ineligible (see also: Minimum Habitability Policy).§!\n"
  shr_autocolonisation_enabled_no_machines_protocols:0 "Ban Machines"
  shr_autocolonisation_enabled_no_machines_protocols_name:0 "Ban Machines Protocols"
- shr_autocolonisation_enabled_no_machines_protocols_desc:0 "Machines have no place in the vanguard. Even if our people have to wear haz-mats, they shall be the ones to forge a path onto new worlds.\n" 
+ shr_autocolonisation_enabled_no_machines_protocols_desc:0 "Machines have no place in the vanguard. Even if our people have to wear haz-mats, they shall be the ones to forge a path onto new worlds.\n\n§ESpecies with highest Habitability rating for a planet will be the one to board the Auto-Coloniser craft, and this will §Rnever§E be a Machine Pop; if no valid Species exists, the planet will not be Auto-Colonised (see also: Minimum Habitability Policy).§!\n" 
 
  policy_shr_autocolonise_habitability_override_pol:0 "Auto-Colonisation: Minimum Habitability"
  policy_shr_autocolonise_habitability_override_pol_desc:0 "Our Colonists may face fair skies, or harsh environments. We shall determine in advance which extremes to subject them to.\n"
